setting up next.js, typescript, eslint, prettier, sass

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,8 @@
 {
-  "extends": "next/core-web-vitals"
+  "env": {
+    "node": true,
+    "browser": true,
+    "amd": true
+  },
+  "extends": ["next/core-web-vitals", "prettier"]
 }
