--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
     "next": "12.3.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
     "typescript": "4.8.3"
