--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.1",
+    "moment": "^2.29.4",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
