--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "12.3.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.1.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
