--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^7.5.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@types/node": "18.7.16",
     "@types/react": "18.0.18",
     "@types/react-dom": "18.0.6",
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.0.3",
     "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
