--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx}'",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
@@ -33,6 +34,7 @@
     "eslint-config-next": "12.3.0",
     "eslint-config-prettier": "^8.5.0",
     "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "node-sass": "^7.0.3",
     "prettier": "^2.7.1",
     "sass": "^1.54.9",
